Added a best of 5 function and a reset button

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     </div>
     <div class="play">
         <button class="but" onclick="playRPS(getComputerChoice(3))">PLAY</button>
+        <button class="but" onclick="scoreComp = 0; scorePlayer = 0">RESET SCORE</button>
     </div>
     <div class="resultcontainer">
         <p class="result" id="result"></p>
